fix: add checks for an empty model, fix perspective division in vertex conversion, optimize processing of vertices and polygons, fix polygon rendering